fix: spacing for PerfCallTree

--- a/front/src/components/PerfCallTree/PerfCallTree.scss
+++ b/front/src/components/PerfCallTree/PerfCallTree.scss
@@ -5,6 +5,11 @@
   min-height: $base-space * 15;
   margin: 0;
   padding: 0;
+
+  & canvas {
+    border: 1px solid $border-color-light;
+    box-sizing: border-box;
+  }
 }
 
 .shadow {
