--- a/front/src/components/SnapshotList/SnapshotList.scss
+++ b/front/src/components/SnapshotList/SnapshotList.scss
@@ -43,11 +43,20 @@
   height: $base-space * 15;
 }
 
+.treeArea {
+  height: $base-space * 15;
+}
+
 .spinner {
   width: $base-space * 3;
   height: $base-space * 3;
   padding: $base-space * 6;
   margin: 0 auto;
+}
+
+.spinnerForTree {
+  @extend .spinner;
+  padding: $base-space * 8.5 - 1px; // consider border
 }
 
 .errorMessage {
@@ -63,6 +72,11 @@
   .table tbody:hover & {
     background-color: $bg-color-gray-4;
   }
+}
+
+.errorMessageForTree {
+  @extend .errorMessage;
+  padding: $base-space * 2.5 - 1px; // consider border
 }
 
 /*
